--- a/unidad 2/(12) Superposición/superposicion.css
+++ b/unidad 2/(12) Superposición/superposicion.css
@@ -44,6 +44,7 @@
 }
 
 #relativo2{ /*Falta posicionamiento */
+	position: relative;
 	width: var(--ancho); 
 	height: 100px; 
 	padding: var(--espacio); 
@@ -54,6 +55,7 @@
 }
 
 #relativo2 div{ /*Falta posicionamiento */
+	position: relative;
 	width: var(--ancho); 
 	padding: var(--espacio); 
 	background-color: #111; 
